--- a/roles/falcon_installation/tasks/preinstall.yml
+++ b/roles/falcon_installation/tasks/preinstall.yml
@@ -32,6 +32,7 @@
     falcon_target_os: RHEL/CentOS/Oracle
     falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "{{ ansible_distribution_major_version }}"
+    falcon_sensor_update_policy_platform: "{{ ansible_system }}"
   when: ansible_os_family == "RedHat"
 
 - name: "CrowdStrike Falcon | Determine if Target OS Is Amazon Linux"
@@ -39,6 +40,7 @@
     falcon_target_os: "Amazon Linux"
     falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "{{ ansible_distribution_major_version }}"
+    falcon_sensor_update_policy_platform: "{{ ansible_system }}"
   when: ansible_distribution == "Amazon"
 
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Debian"
@@ -46,6 +48,7 @@
     falcon_target_os: "{{ ansible_distribution }}"
     falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "9/10"
+    falcon_sensor_update_policy_platform: "{{ ansible_system }}"
   when:
     - ansible_distribution == "Debian"
 
@@ -54,6 +57,7 @@
     falcon_target_os: "{{ ansible_distribution }}"
     falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "{{ ansible_distribution_major_version }}"
+    falcon_sensor_update_policy_platform: "{{ ansible_system }}"
   when:
     - ansible_distribution == "SLES"
 
@@ -62,6 +66,7 @@
     falcon_target_os: "{{ ansible_distribution }}"
     falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "16/18/20"
+    falcon_sensor_update_policy_platform: "{{ ansible_system }}"
   when:
     - ansible_distribution == "Ubuntu"
 
@@ -71,6 +76,7 @@
     falcon_os_family: "mac"
     falcon_path: "/Applications/Falcon.app/Contents/Resources/"
     falcon_os_version: ""
+    falcon_sensor_update_policy_platform: "{{ falcon_os_family | capitalize }}"
   when: ansible_distribution == "MacOSX"
 
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Microsoft Windows"
@@ -78,6 +84,7 @@
     falcon_target_os: "{{ ansible_os_family }}"
     falcon_os_family: "{{ ansible_os_family | lower }}"
     falcon_os_version: ""
+    falcon_sensor_update_policy_platform: "{{ ansible_os_family }}"
   when: ansible_os_family == "Windows"
 
 - name: CrowdStrike Falcon | Set default sensor name
@@ -100,7 +107,7 @@
     path: "{{ falcon_install_tmp_dir }}"
     state: directory
   when:
-    - ansible_os_family == "Linux" or ansible_system == "Darwin"
+    - ansible_system == "Linux" or ansible_system == "Darwin"
     - falcon_install_tmp_dir is defined
 
 - name: CrowdStrike Falcon | Verify Temporary Install Directory Exists (Windows)
