--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -14,4 +14,4 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ansible/ansible-lint-action@master
       with:
-        args: "-c tests/ansible-lint.conf roles/*"
+        targets: roles
