--- a/tests/test.yml
+++ b/tests/test.yml
@@ -2,4 +2,5 @@
 - hosts: localhost
   remote_user: root
   roles:
-    - crowdstrike-falcon-role
+    - crowdstrike.falcon.falcon_installation
+    - crowdstrike.falcon.falcon_uninstall
