--- a/roles/falcon_installation/tasks/preinstall.yml
+++ b/roles/falcon_installation/tasks/preinstall.yml
@@ -43,6 +43,14 @@
     falcon_sensor_update_policy_platform: "{{ ansible_system }}"
   when: ansible_distribution == "Amazon"
 
+- name: "CrowdStrike Falcon | Determine if Target OS Is Amazon Linux ARM architecture"
+  ansible.builtin.set_fact:
+    falcon_target_os: "Amazon Linux"
+    falcon_os_family: "{{ ansible_system | lower }}"
+    falcon_os_version: "2 - arm64"
+    falcon_sensor_update_policy_platform: "{{ ansible_system }}"
+  when: ansible_distribution == "Amazon" and ansible_machine == "aarch64"
+
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Debian"
   ansible.builtin.set_fact:
     falcon_target_os: "{{ ansible_distribution }}"
