--- a/roles/falcon_installation/tasks/api.yml
+++ b/roles/falcon_installation/tasks/api.yml
@@ -47,17 +47,30 @@
       msg: "No Falcon Sensor Update Policy with name: {{ falcon_sensor_update_policy_name }} was found!"
     when: falcon_sensor_update_policy_info.json.resources[0] is not defined
 
+  - name: "CrowdStrike Falcon | Validate Sensor Update Policy request for aarch64 architectures"
+    ansible.builtin.fail:
+      msg: "No Falcon Sensor Update Policy with name: {{ falcon_sensor_update_policy_name }} and enabled for aarch64 was found!"
+    when:
+      - falcon_sensor_update_policy_info.json.resources[0].settings.variants[0] is not defined
+      - ansible_machine == "aarch64"
+
   - name: "CrowdStrike Falcon | Get the Falcon Sensor version from Update Policy"
     ansible.builtin.set_fact:
       falcon_sensor_update_policy_package_version: "{{ falcon_sensor_update_policy_info.json.resources[0].settings.sensor_version }}"
+    when: ansible_machine != "aarch64"
 
-  - name: "CrowdStrike Falcon | Build API Query"
+  - name: "CrowdStrike Falcon | Get the Falcon Sensor version from Update Policy for aarch64 architecture"
+    ansible.builtin.set_fact:
+      falcon_sensor_update_policy_package_version: "{{ falcon_sensor_update_policy_info.json.resources[0].settings.variants[0].sensor_version }}"
+    when: ansible_machine == "aarch64"
+
+  - name: "CrowdStrike Falcon | Build API Sensor Query based on Sensor Update Policy"
     ansible.builtin.set_fact:
       falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"+version:\"' + falcon_sensor_update_policy_package_version + '\"' }}"
 
   when: falcon_sensor_update_policy_name
 
-- name: "CrowdStrike Falcon | Build API Query"
+- name: "CrowdStrike Falcon | Build API Sensor Query"
   ansible.builtin.set_fact:
     falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"' }}"
   when: not falcon_sensor_update_policy_name
