--- a/roles/falcon_installation/tasks/win_api.yml
+++ b/roles/falcon_installation/tasks/win_api.yml
@@ -49,13 +49,13 @@
     ansible.builtin.set_fact:
       falcon_sensor_update_policy_package_version: "{{ falcon_sensor_update_policy_info.json.resources[0].settings.sensor_version }}"
 
-  - name: "CrowdStrike Falcon | Build API Query"
+  - name: "CrowdStrike Falcon | Build API Sensor Query based on Sensor Update Policy"
     ansible.builtin.set_fact:
       falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"+version:\"' + falcon_sensor_update_policy_package_version + '\"' }}"
 
   when: falcon_sensor_update_policy_name
 
-- name: "CrowdStrike Falcon | Build API Query"
+- name: "CrowdStrike Falcon | Build API Sensor Query"
   ansible.builtin.set_fact:
     falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"' }}"
   when: not falcon_sensor_update_policy_name
