--- a/roles/falcon_installation/tasks/preinstall.yml
+++ b/roles/falcon_installation/tasks/preinstall.yml
@@ -27,54 +27,37 @@
     ansible_python_interpreter: /usr/bin/python
   when: ansible_distribution == "Amazon"
 
-- name: "CrowdStrike Falcon | Determine if Endpoint Operating System Is RHEL, CentOS, or Oracle Linux"
+- name: "CrowdStrike Falcon | Default Operating System configuration"
   ansible.builtin.set_fact:
-    falcon_target_os: RHEL/CentOS/Oracle
+    falcon_target_os: "{{ ansible_distribution }}"
     falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "{{ ansible_distribution_major_version }}"
     falcon_sensor_update_policy_platform: "{{ ansible_system }}"
+
+- name: "CrowdStrike Falcon | Determine if Endpoint Operating System Is RHEL, CentOS, or Oracle Linux"
+  ansible.builtin.set_fact:
+    falcon_target_os: RHEL/CentOS/Oracle
   when: ansible_os_family == "RedHat"
 
 - name: "CrowdStrike Falcon | Determine if Target OS Is Amazon Linux"
   ansible.builtin.set_fact:
     falcon_target_os: "Amazon Linux"
-    falcon_os_family: "{{ ansible_system | lower }}"
-    falcon_os_version: "{{ ansible_distribution_major_version }}"
-    falcon_sensor_update_policy_platform: "{{ ansible_system }}"
   when: ansible_distribution == "Amazon"
 
 - name: "CrowdStrike Falcon | Determine if Target OS Is Amazon Linux ARM architecture"
   ansible.builtin.set_fact:
-    falcon_target_os: "Amazon Linux"
-    falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "2 - arm64"
-    falcon_sensor_update_policy_platform: "{{ ansible_system }}"
   when: ansible_distribution == "Amazon" and ansible_machine == "aarch64"
 
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Debian"
   ansible.builtin.set_fact:
-    falcon_target_os: "{{ ansible_distribution }}"
-    falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "9/10"
-    falcon_sensor_update_policy_platform: "{{ ansible_system }}"
   when:
     - ansible_distribution == "Debian"
 
-- name: "CrowdStrike Falcon | Endpoint Operating System Detected Is SLES"
-  ansible.builtin.set_fact:
-    falcon_target_os: "{{ ansible_distribution }}"
-    falcon_os_family: "{{ ansible_system | lower }}"
-    falcon_os_version: "{{ ansible_distribution_major_version }}"
-    falcon_sensor_update_policy_platform: "{{ ansible_system }}"
-  when:
-    - ansible_distribution == "SLES"
-
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Ubuntu"
   ansible.builtin.set_fact:
-    falcon_target_os: "{{ ansible_distribution }}"
-    falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "16/18/20"
-    falcon_sensor_update_policy_platform: "{{ ansible_system }}"
   when:
     - ansible_distribution == "Ubuntu"
 
@@ -89,8 +72,6 @@
 
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Microsoft Windows"
   ansible.builtin.set_fact:
-    falcon_target_os: "{{ ansible_os_family }}"
-    falcon_os_family: "{{ ansible_os_family | lower }}"
     falcon_os_version: ""
     falcon_sensor_update_policy_platform: "{{ ansible_os_family }}"
   when: ansible_os_family == "Windows"
