--- a/roles/falcon_install/tasks/url.yml
+++ b/roles/falcon_install/tasks/url.yml
@@ -4,6 +4,8 @@
   ansible.builtin.get_url:
     url: "{{ falcon_download_url }}"
     dest: "{{ falcon_install_temp_directory.path }}"
+    url_username: "{{ falcon_download_url_username | default(omit) }}"
+    url_password: "{{ falcon_download_url_password | default(omit) }}"
     mode: 0640
   when:
     - falcon_download_url
