--- a/.github/workflows/falcon_configure.yml
+++ b/.github/workflows/falcon_configure.yml
@@ -33,6 +33,7 @@ jobs:
         molecule_distro:
           - { "distro":"centos7" }
           - { "distro":"rockylinux8" }
+          - { "distro":"rockylinux9" }
           - { "distro":"ubuntu2004" }
         collection_role:
           - falcon_configure
