--- a/.github/workflows/falcon_uninstall.yml
+++ b/.github/workflows/falcon_uninstall.yml
@@ -32,6 +32,7 @@ jobs:
         molecule_distro:
           - { "distro":"centos7" }
           - { "distro":"rockylinux8" }
+          - { "distro":"rockylinux9" }
           - { "distro":"ubuntu2004" }
         collection_role:
           - falcon_uninstall
