--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,8 +3,10 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'docs/**'
+
+  # Run manually if needed
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
