Fix arg for retries

--- a/.github/workflows/falcon_configure.yml
+++ b/.github/workflows/falcon_configure.yml
@@ -69,7 +69,7 @@ jobs:
         with:
           timeout_minutes: 6
           max_attempts: 3
-          retry-on: error
+          retry_on: error
           command: >-
             molecule --version &&
             ansible --version &&
