--- a/.github/workflows/falcon_uninstall.yml
+++ b/.github/workflows/falcon_uninstall.yml
@@ -68,7 +68,7 @@ jobs:
         with:
           timeout_minutes: 6
           max_attempts: 3
-          retry-on: error
+          retry_on: error
           command: >-
             molecule --version &&
             ansible --version &&
