--- a/roles/falcon_configure/tasks/api.yml
+++ b/roles/falcon_configure/tasks/api.yml
@@ -14,6 +14,13 @@
   register: falcon_api_oauth2_token
   no_log: "{{ falcon_api_enable_no_log }}"
 
+- name: CrowdStrike Falcon | Auto-discover CrowdStrike Cloud Region
+  ansible.builtin.set_fact:
+      falcon_cloud: "{{ falcon_cloud_urls[falcon_api_oauth2_token.x_cs_region] }}"
+  when:
+    - falcon_cloud_autodiscover
+    - falcon_api_oauth2_token.x_cs_region | length > 0
+
 - name: CrowdStrike Falcon | Detect Target CID Based on Credentials
   ansible.builtin.uri:
     url: https://{{ falcon_cloud }}/sensors/queries/installers/ccid/v1
