--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -51,3 +51,17 @@ releases:
     - add-local-file-install-method.yml
     - fix-failing-aid-master-prep.yml
     release_date: '2022-09-16'
+  3.2.22:
+    changes:
+      bugfixes:
+      - falcon_configure - fix issue with falcon_cloud variable not being set correctly
+        (https://github.com/CrowdStrike/ansible_collection_falcon/issues/257)
+      release_summary: '| Release Date: 2022-09-16
+
+        | `Release Notes: <https://github.com/CrowdStrike/ansible_collection_falcon/releases/tag/3.2.22>`__
+
+        '
+    fragments:
+    - 3.2.22-summary.yaml
+    - fix-falcon-configure-var-issue.yaml
+    release_date: '2022-09-30'
