--- a/roles/falcon_install/tasks/api.yml
+++ b/roles/falcon_install/tasks/api.yml
@@ -23,8 +23,10 @@
     - falcon_api_oauth2_token.x_cs_region | length > 0
 
 # Block when falcon_sensor_update_policy_name is supplied
-- name: Sensor Update Policy Block
-  when: falcon_sensor_update_policy_name
+- name: Build Sensor Update Policy Block (Linux)
+  when:
+    - falcon_sensor_update_policy_name
+    - falcon_sensor_update_policy_platform == 'Linux'
   block:
     - name: "CrowdStrike Falcon | Build Sensor Update Policy API Query"
       ansible.builtin.set_fact:
@@ -40,7 +42,33 @@
           Content-Type: application/json
       register: falcon_sensor_update_policy_info
       no_log: "{{ falcon_api_enable_no_log }}"
+      run_once: yes
 
+- name: Build Sensor Update Policy Block (MacOS)
+  when:
+    - falcon_sensor_update_policy_name
+    - falcon_sensor_update_policy_platform == 'Mac'
+  block:
+    - name: "CrowdStrike Falcon | Build Sensor Update Policy API Query"
+      ansible.builtin.set_fact:
+        falcon_sensor_update_policy_query: "{{ 'platform_name:\"' + falcon_sensor_update_policy_platform + '\"+name.raw:\"' + falcon_sensor_update_policy_name + '\"' }}"
+
+    - name: "CrowdStrike Falcon | Search for Sensor Update Policy"
+      ansible.builtin.uri:
+        url: "https://{{ falcon_cloud }}/policy/combined/sensor-update/v2?filter={{ falcon_sensor_update_policy_query | urlencode }}"
+        method: GET
+        return_content: true
+        headers:
+          authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
+          Content-Type: application/json
+      register: falcon_sensor_update_policy_info
+      no_log: "{{ falcon_api_enable_no_log }}"
+      run_once: yes
+
+- name: Sensor Update Policy Block
+  when:
+    - falcon_sensor_update_policy_name
+  block:
     - name: "CrowdStrike Falcon | Validate Sensor Update Policy request"
       ansible.builtin.fail:
         msg: "No Falcon Sensor Update Policy with name: {{ falcon_sensor_update_policy_name }} was found!"
